profilelist1exp/unpackaged/objects/NPS_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mapping</fullName>
                </value>
                <value>
                    <fullName>Case Creation</fullName>
                </value>
                <value>
                    <fullName>Case Owner</fullName>
                </value>
                <value>
                    <fullName>Field Advocate</fullName>
                </value>
                <value>
                    <fullName>Validation</fullName>
                </value>
                <value>
                    <fullName>Passive Promoter</fullName>
                </value>
                <value>
                    <fullName>Advocate</fullName>
                    <isActive>false</isActive>
                    <label>Advocate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NPS Mapping</label>
    <listViews>
        <fullName>All_NPS_Mappings</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Source__c</columns>
        <columns>Target__c</columns>
        <filterScope>Everything</filterScope>
        <label>All NPS Mappings</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>NPS Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPS Mappings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>